Added notebook chapter 3

--- a/notebook/01  Slow Programming & Close Reading.ipynb
+++ b/notebook/01  Slow Programming & Close Reading.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reproducible Acts of Scholarly Hermeneutics ###\n",
+    "### Reproducible acts of scholarly hermeneutics ###\n",
     "\n",
     "I contend that hermeneutics and interpretation are not mutual exclusive with code. Software and automation *can* be used as reductive methods that limit interpretation or are only crude hermeneutic means on the level of code, but I assert that they need not be. In fact, if anything, code in its form of literate programming (<a href=\"#bibref_007\" name=\"backref_bibref_007\" id=\"backref_bibref_007\">Knuth 1984</a>) is a meticulous precise description of process. Next to that code is also 'just text', just another semiotic system (<a href=\"#bibref_008\" name=\"backref_bibref_008\" id=\"backref_bibref_008\">Marino 2006</a>, <a href=\"#bibref_009\" name=\"backref_bibref_009\" id=\"backref_bibref_009\">Van Zundert 2016</a>). Therefore, if we agree that text is an excellent means for reporting hermeneutic process, code should even be better—because it is 'just' text, but with an edge: it will reproduce process meticulously, as long as we capture the hermeneutic process precisely enough. This is what I want to try to do in this experiment: model each and all hermeneutic choices when reading/editing a text meticulously into code. I will use an Object Oriented approach (<a href=\"#bibref_010\" name=\"backref_bibref_010\" id=\"backref_bibref_010\">Bogost 2009</a>; <a href=\"#bibref_011\" name=\"backref_bibref_011\" id=\"backref_bibref_011\">Object Oriented Programming</a>) to conceptualizing the model and creating the code. I will furthermore hold to these rules when 'Close Reading' a text using code:\n",
     "\n",
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setting up for the Simulation\n",
+    "### Setting up for the simulation\n",
     "I will be meticulously programming the editorial workflow as a means of code literacy and code scholarship. I understand scholarly code as code that *performs* scholarly *actions*. The digital technology practically available in general for scholars is not as advanced that it may perform physical actions (apart from printing probably). However all other scholarly actions should be mimicked or simulated as closely as possible, and paramount: should be reproducible. Before we can do so some setting up is required. This notebook assumes that you have (access to) a computer with this [Jupyter Notebook](http://jupyter.org/) installed. If not you wouldn't be reading this. The other technical requirements are described as code comments in the next 'cell'. Please follow these requirements guidelines narrowly. This notebook will not work otherwise."
    ]
   },
@@ -87,7 +87,7 @@
     "collapsed": true
    },
    "source": [
-    "### Getting the Manuscript ###\n",
+    "### Getting the manuscript ###\n",
     "\n",
     "Usually the first task when editing is finding, selecting, and perusing one's sources. Obviously the tasks and actions related to getting to the manuscript and digitally photographing it can not be captured in this notebook. Both because computers are severely handicapted for performing such actions—there is a long way to go before computers are actually that actionable—and because of time and economic constraints. The results of such scholarly actions are luckily however in the invaluable care of the Württembergische Landesbibliothek Stuttgart (http://www.wlb-stuttgart.de/), and we can emulate 'going to the library and getting the source' by using the online facsimile bank of the Württembergische Landesbibliothek. \n",
     "\n",
