--- a/notebook/02  From Transcription to Digital Text.ipynb
+++ b/notebook/02  From Transcription to Digital Text.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "We are faced with a problem. There is now a machine readable text, but it is littered with stuff we do not want. To create their edition, Bouwman et al. added line numbers, a translation in English, a plethora of footnotes and annotations. There's also remnants of the print book: page numbers, page headers, etc. If a full computational edition of the Reynaert edition by Bouwman et al. would be th goal of this project, we might actually be interested in these elements and we might want to capture them. However here I am interested in the meticulous reproducibility of the scholarly process of editing through code and in reading the text of the Reynaert through code. Capturing the book metaphor that is 'inbuilt' in the exiting edition is less relevant to this direct aim, though it would be an interesting later project to persu the mise-en-abyme of computationally creating the digital scholarly edition of the scholarly print edition. But right now the task is to separate the Middle Dutch verses from the rest.\n",
     "\n",
-    "### Of a Parser, Model, and Visitor\n",
+    "### Of a parser, a model, and a visitor\n",
     "\n",
     "The approach I take is rather straight forward. I will read in the text line by line and I will see if each line mathces to a certain model. So we will need models and some machinery to have the text be matched for those models. The latter piece of machinery we usually call a parser. The models we will just call models. Having the parser calling on the models to see of they match for any line is equivalent to applying a so called '[visitor pattern](https://en.wikipedia.org/wiki/Software_design_pattern)'. Patterns in software development are certain standard strategies to attack common tasks or problems. "
    ]
@@ -19,14 +19,14 @@
     "collapsed": true
    },
    "source": [
-    "#### The Super Model\n",
+    "#### The super model\n",
     "\n",
     "So, we know that we will need several models, pieces of code that can recognize footnotes, empty lines, page numbers, etc. for us. Thus a case where we have several objects of the category model. And each model will have to be able to match itself against all lines of a text. We express this commonality via a super class Model. All concrete models for matching will be variant of that."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
        ":visit"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +89,7 @@
        ":matches"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -152,10 +152,10 @@
     {
      "data": {
       "text/plain": [
-       ":visit"
+       ":matches"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,15 +165,8 @@
     "\n",
     "  # Whenever this model is created/used it loads a number of variables,\n",
     "  # e.g. the list of English stop words (@stopwords), which is read from a file.\n",
-    "  # There are English stopwords that are homonyms of Middle Dutch words. We do not\n",
-    "  # want to count these as English, therefore we substract the set of these words\n",
-    "  # (@may_be_middle_dutch) from the set of English stopwords.\n",
-    "  # Hints may be provided to recognize particular cases, that is: if we know certain\n",
-    "  # words definitely indicate an English line we can at these to the set of hints.\n",
     "  def initialize\n",
-    "    @may_be_middle_dutch = [ \"an\", \"as\", \"been\", \"by\", \"have\", \"he\", \"her\", \"here\", \"i\", \"in\", \"is\", \"me\", \"mine\", \"no\", \"so\", \"over\", \"was\", \"we\" ]\n",
-    "    @hints = [ \"prologue\" ]\n",
-    "    @stopwords = File.read( './resources/stopwords_en.txt' ).split( \"\\n\" ) - @may_be_middle_dutch + @hints\n",
+    "    @stopwords = File.read( './resources/stopwords_en.txt' ).split( \"\\n\" )\n",
     "    @threshold = 0.2\n",
     "  end\n",
     "\n",
@@ -192,8 +185,6 @@
     "  # This computes the 'English score' for a line.\n",
     "  # The line is first split into its individual tokens.\n",
     "  # Then we count all English stopwords with a weight of 1.\n",
-    "  # We count those words that *might* be English, but *could*\n",
-    "  # also be Middle Dutch too, but their weight is 0.4.\n",
     "  # Finally we compute the relative score, that is: the count of English\n",
     "  # words divided by the total number of tokens on the line.\n",
     "  def score( string )\n",
@@ -202,7 +193,6 @@
     "    tokens.each do |token|\n",
     "      stripped = strip_embracing_punctuation( token )\n",
     "      score += 1.0 if @stopwords.include?( stripped.downcase )\n",
-    "      score += 0.4 if @may_be_middle_dutch.include?( stripped.downcase )\n",
     "    end\n",
     "    score/tokens.size()\n",
     "  end\n",
@@ -212,39 +202,6 @@
     "  # than the threshold of 0.2. (Thus if 20% of the tokens could be English.)\n",
     "  def matches( line )\n",
     "    score( line ) > @threshold\n",
-    "  end\n",
-    "\n",
-    "  # The visit method for the English model is a little more elaborate than\n",
-    "  # the one for the other models. It happens that some lines are not\n",
-    "  # recognized as English whereas they are, so we need additional power\n",
-    "  # of recognition. That's why this visit method ask for the context of\n",
-    "  # the lines it is curretly trying to match. If both the line before\n",
-    "  # and after are English, then it is assumed that the line in between\n",
-    "  # is also English\n",
-    "  def visit( text )\n",
-    "    matches=[]\n",
-    "    text.each_line_with_context do | line, prev, succ |\n",
-    "      if matches( line )\n",
-    "        matches.push( self.class )\n",
-    "      else\n",
-    "        empty_model = Empty.new\n",
-    "        if !empty_model.matches( line )\n",
-    "          # Post correction, if in between two english matches, it probably should be matched too\n",
-    "          prev.reject! { |line| empty_model.matches( line ) }\n",
-    "          succ.reject! { |line| empty_model.matches( line ) }\n",
-    "          previous_matches = matches( prev[0] ) if prev.size > 0\n",
-    "          next_matches = matches( succ[0] ) if succ.size > 0\n",
-    "          if previous_matches && next_matches\n",
-    "            matches.push( self.class )\n",
-    "          else\n",
-    "            matches.push( nil )\n",
-    "          end\n",
-    "        else\n",
-    "          matches.push( nil )\n",
-    "        end\n",
-    "      end\n",
-    "    end\n",
-    "    matches\n",
     "  end\n",
     "\n",
     "end"
@@ -261,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -272,7 +229,7 @@
        ":parse"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,9 +320,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -374,9 +332,7 @@
      "text": [
       "Willem die Madocke maecte, [192va,22]\n",
       "daer hi dicken omme waecte,\n",
-      "hem vernoyde so haerde\n",
       "dat die avonture van Reynaerde\n",
-      "in Dietsche onghemaket bleven\n",
       "— die Arnout niet hevet vulscreven —\n",
       "dat hi die vijte dede soucken\n",
       "ende hise na den Walschen boucken\n",
@@ -399,7 +355,7 @@
       "Dat en segghic niet dor minen wille.\n",
       "Mijns dichtens ware een ghestille,\n",
       "ne hads mi eene niet ghebeden\n",
-      "die in groeter hovesscheden\n",
+      "Prologue\n",
       "gherne keert hare saken.\n",
       "Soe bat mi dat ic soude maken\n",
       "dese avontuere van Reynaerde.\n",
@@ -412,7 +368,6 @@
       "sijn si arem, sijn si rike,\n",
       "diet verstaen met goeden sinne.\n",
       "Nu hoert hoe ic hier beghinne!\n",
-      "Het was in eenen tsinxendaghe\n",
       "dat beede bosch ende haghe\n",
       "met groenen loveren waren bevaen.\n",
       "Nobel die coninc hadde ghedaen\n",
@@ -425,12 +380,12 @@
       "Hi hadde te hove so vele mesdaen\n",
       "dat hire niet dorste gaen.\n",
       "Die hem besculdich kent, ontsiet.\n",
-      "Also was Reynaerde ghesciet\n",
       "ende hieromme scuwedi sconinx hof,\n",
       "daer hi in hadde crancken lof.\n",
       "Doe al dat hofversamet was,\n",
       "was daer niemen, sonder die das,\n",
       "hi ne hadde te claghene over Reynaerde,\n",
+      "King Nobel holds court\n",
       "den fellen metten grijsen baerde.\n",
       "Nu gaet hier up eene claghe.\n",
       "Isingrijn ende sine maghe\n",
@@ -445,17 +400,14 @@
       "groeten lachter ende verlies.\n",
       "Voer al dandre ontfaerme hu dies\n",
       "dat hi mijn wijfhevet verhoert\n",
-      "ende mine kindre so mesvoert\n",
       "dat hise beseekede daer si laghen,\n",
       "datter twee noint ne saghen\n",
       "ende si worden staerblent.\n",
       "Nochtan hoendi mi sent.\n",
-      "Het was sint so verre comen\n",
       "datter eenen dach af was ghenomen\n",
       "ende Reynaerd soude hebben ghedaen\n",
       "sine onsculde. Ende also saen\n",
       "alse die heleghe waren brocht,\n",
-      "was hi andersins bedocht\n",
       "ende ontfoer ons in sine veste.\n",
       "Heere, dit kennen noch die beste\n",
       "die te hove zijn commen hier.\n",
@@ -468,13 +420,10 @@
       "Dies zwijghics nochtan,\n",
       "neware mijns wives lachter\n",
       "ne mach niet bliven achter,\n",
-      "no onversweghen no onghewroken.’\n",
       "Doe Ysengrijn dit hadde ghesproken,\n",
       "stont up een hondekijn, hiet Cortoys,\n",
       "ende claghede den coninc in Francsoys\n",
-      "hoet so arem was wijleneere\n",
       "dat alles goets en hadde meere\n",
-      "in eenen winter, in eene vorst,\n",
       "dan alleene eene worst\n",
       "ende hem Reynaert, die felle man, [193rb]\n",
       "die selve worst stal ende nam.\n",
@@ -483,17 +432,15 @@
       "ende spranc midden in den rinc\n",
       "ende seide: ‘Heere coninc,\n",
       "dordat ghi Reynaerde zijt onhout,\n",
-      "so en es hier jonc no hout,\n",
       "hi ne hebbe te wroughene jeghen hu.\n",
       "Dat Cortoys claghet nu,\n",
       "dats over menich jaer ghesciet.\n",
-      "Die worst was mine, al en claghic niet.\n",
       "Ic hadse bi miere lust ghewonnen\n",
       "daer ic bi nachte quam gheronnen\n",
       "omme bejach in eene molen,\n",
       "daer ic die worst in hadde ghestolen\n",
       "eenen slapenden molenman.\n",
-      "Hadder Cortoys yewet an,\n",
+      "happened many a year ago.\n",
       "dan was bi niemene dan bi mi.\n",
       "Hets recht dat omberecht zi\n",
       "die claghe die Cortoys doet.’\n",
@@ -504,7 +451,6 @@
       "Hi ne heeft oec niemene so lief,\n",
       "no den coninc, minen heere,\n",
       "hi ne wilde dat hi lijf ende eere\n",
-      "verlore, mochtire an winnen\n",
       "een vet morzeel van eere hinnen.\n",
       "Wat sechdi van eere laghe?\n",
       "En dedi ghistren in den daghe\n",
@@ -549,7 +495,6 @@
       "hi sal noch hoenen binnen eere maent\n",
       "sulken dies niet ne bewaent.’\n",
       "Doe spranc up Grinbert die das,\n",
-      "die Reynaerts broedersone was,\n",
       "met eere verbolghenlike tale:\n",
       "‘Heere Ysengrijn, men weet dat wale\n",
       "ende hets een hout bijspel:\n",
@@ -558,6 +503,7 @@
       "ic wilde, hi hinghe an eenen boem\n",
       "bi ziere kelen als een dief\n",
       "die andren heeft ghedaen meest grief.\n",
+      "‘Lord Ysingrijn, as everyone surely knows\n",
       "Heere Ysengrijn, wildi angaen\n",
       "soendinc ende dat ontfaen,\n",
       "daertoe willic helpen gherne. [193vb]\n",
@@ -584,7 +530,6 @@
       "doe ghi hem volghet van verren\n",
       "ende ghi die beste pladijse uplaset,\n",
       "daer ghi hu ane hadt versadet.\n",
-      "Ghi ne gaeft hem no goet no quaet,\n",
       "sonder alleene eenen pladijsengraet\n",
       "dat ghi hem te jeghen brocht,\n",
       "dordat ghine niet en mocht.\n",
@@ -593,11 +538,9 @@
       "dien ghi leit in huwen muzeele.\n",
       "cart, leaving nothing but the bones ofone single ﬁsh (cf. p. 31—32).\n",
       "Doe Reynaert heesschede zijn deele,\n",
-      "andwoerdi hem in scerne:\n",
       "“Hu deel willic hu gheven gherne,\n",
       "Reynaert, scone jonghelinc!\n",
       "Die wisse daer die bake an hinc,\n",
-      "becnause, so es so vet.”\n",
       "Reynaerde waes lettel te bet\n",
       "dat hi den goeden bake ghewan\n",
       "in sulker zorghen, dattene een man\n",
@@ -617,7 +560,6 @@
       "Omdat Haersint, die scone vrouwe,\n",
       "dor minne ende dor quade zede\n",
       "Reynaert sinen wille dede,\n",
-      "wattan? So was sciere ghenesen.\n",
       "Wat talen mach daeromme wesen?\n",
       "Nu maket heere Cuwaert, die hase,\n",
       "eene claghe van eere blase.\n",
@@ -625,10 +567,12 @@
       "Reynaerd, die zijn meester was,\n",
       "mochte hi sinen clerc niet blauwen?\n",
       "Dat ware onrecht, entrauwen.\n",
+      "Reynaert, my dear young man!\n",
+      "accommodated Reynaert\n",
+      "Now Lord Cuwaert, the hare,\n",
       "Cortoys claghet om eene worst\n",
       "die hi verloes in eene vorst.\n",
       "Die claghe ware bet verholen:\n",
-      "ende hoerdi dat so was ghestolen?\n",
       "Male quesite male perdite:\n",
       "over rechtwert men qualike quite\n",
       "dat men hevet qualic ghewonnen.\n",
@@ -642,7 +586,6 @@
       "hermite ofte clusenare.\n",
       "Naest siere huut draecht hi een hare.\n",
       "Binnen desen naesten jare\n",
-      "so ne hat hi vleesch, no Wilt no tam.\n",
       "Dat seidi die ghistren danen quam.\n",
       "Malcroys hevet hi begheven, [194rb]\n",
       "sinen casteel, ende hevet upheven\n",
@@ -671,13 +614,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But wait! That is not correct. Anyone who knows the Reynaert will spot that something is off already in the first few line. The Reynaert (in the Comburg manuscript) reads:\n",
+    "\n",
+    "  > Willem die Madocke maecte, [192va,22]<br/>\n",
+    "    daer hi dicken omme waecte,<br/>\n",
+    "    hem vernoyde so haerde<br/>\n",
+    "    dat die avonture van Reynaerde<br/>\n",
+    "    in Dietsche onghemaket bleven<br/>\n",
+    "    — die Arnout niet hevet vulscreven —<br/>\n",
+    "    dat hi die vijte dede soucken<br/>\n",
+    "    ende hise na den Walschen boucken<br/>\n",
+    "    in Dietsche dus hevet begonnen.<br/>\n",
+    "\n",
+    "But our parser gives us:\n",
+    "\n",
+    "  > Willem die Madocke maecte, [192va,22]<br/>\n",
+    "    daer hi dicken omme waecte,<br/>\n",
+    "    dat die avonture van Reynaerde<br/>\n",
+    "    — die Arnout niet hevet vulscreven —<br/>\n",
+    "    dat hi die vijte dede soucken<br/>\n",
+    "    ende hise na den Walschen boucken<br/>\n",
+    "    in Dietsche dus hevet begonnen.<br/>\n",
+    "\n",
+    "It missed the lines \"hem vernoyde so haerde\" and \"in Dietsche onghemaket bleven\". And also apparently it kept on to some English as well, a long part of a footnote is found lodged withing the text: \"cart, leaving nothing but the bones ofone single ﬁsh (cf. p. 31—32).\" What happened?\n",
+    "\n",
+    "On closer inspection it turns out that \"hem vernoyde so haerde\" contains an Middle Dutch word that is also an English stop word ('so'). And because the verse is so short, it's relative English score hits the threshold of 0.5. Converse the English footnote text has an OCR misreading which 'hides' two English stop words (\"ofone\"), which keeps it under the threshold. \n",
+    "\n",
+    "Clearly our English parsing model is not up to par yet. We will have to iterate the code through a new development cycle to improve the performance. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "[Proceed to the next chapter](/notebooks/03%20%20On%20Iterations.ipynb)"
+   ]
   }
  ],
  "metadata": {
