Updated noteboos to reflect refactoring

--- a/notebook/02  From Transcription to Digital Text.ipynb
+++ b/notebook/02  From Transcription to Digital Text.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "## Chapter 2 — From Transcription to Digital Text \n",
     "\n",
-    "We are faced with a problem. There is now a machine readable text, but it is littered with stuff we do not want. To create their edition, Bouwman et al. added line numbers, a translation in English, a plethora of footnotes and annotations. There's also remnants of the print book: page numbers, page headers, etc. If a full computational edition of the Reynaert edition by Bouwman et al. would be th goal of this project, we might actually be interested in these elements and we might want to capture them. However here I am interested in the meticulous reproducibility of the scholarly process of editing through code and in reading the text of the Reynaert through code. Capturing the book metaphor that is 'inbuilt' in the exiting edition is less relevant to this direct aim, though it would be an interesting later project to persu the mise-en-abyme of computationally creating the digital scholarly edition of the scholarly print edition. But right now the task is to separate the Middle Dutch verses from the rest.\n",
+    "We are faced with a problem. There is now a machine readable text, but it is littered with stuff we do not want. To create their edition, Bouwman et al. added line numbers, a translation in English, a plethora of footnotes and annotations. There's also remnants of the print book: page numbers, page headers, etc. If a full computational edition of the Reynaert edition by Bouwman et al. would be th goal of this project, we might actually be interested in these elements and we might want to capture them. However here I am interested in the meticulous reproducibility of the scholarly process of editing through code and in reading the text of the Reynaert through code. Capturing the book metaphor that is 'inbuilt' in the exiting edition is less relevant to this direct aim, though it would be an interesting later project to pursue the mise-en-abyme of computationally creating the digital scholarly edition of the scholarly print edition. But right now the task is to separate the Middle Dutch verses from the rest.\n",
     "\n",
-    "### Of a parser, a model, and a visitor\n",
+    "### Of a parser and models\n",
     "\n",
-    "The approach I take is rather straight forward. I will read in the text line by line and I will see if each line mathces to a certain model. So we will need models and some machinery to have the text be matched for those models. The latter piece of machinery we usually call a parser. The models we will just call models. Having the parser calling on the models to see of they match for any line is equivalent to applying a so called '[visitor pattern](https://en.wikipedia.org/wiki/Software_design_pattern)'. Patterns in software development are certain standard strategies to attack common tasks or problems. "
+    "The approach I take is rather straight forward. I will read in the text line by line and I will see if each line matches to a certain model. So we will need models and some machinery to have the text be matched for those models. The latter piece of machinery we usually call a parser. The models we will just call models. "
    ]
   },
   {
@@ -21,7 +21,7 @@
    "source": [
     "#### The super model\n",
     "\n",
-    "So, we know that we will need several models, pieces of code that can recognize footnotes, empty lines, page numbers, etc. for us. Thus a case where we have several objects of the category model. And each model will have to be able to match itself against all lines of a text. We express this commonality via a super class Model. All concrete models for matching will be variant of that."
+    "So, we know that we will need several models, pieces of code that can recognize footnotes, empty lines, page numbers, etc. for us. Thus a case where we have several objects of the category model. And each model will have to be able to match itself against each line of a text. We express this commonality via a super class Model. All concrete models for matching will be variant of that."
    ]
   },
   {
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/plain": [
-       ":visit"
+       ":matches"
       ]
      },
      "execution_count": 1,
@@ -46,22 +46,9 @@
     "class Model\n",
     "\n",
     "  # Determines if the model matches a line of text.\n",
+    "  # By default it returns false because it doesn't match anything.\n",
     "  def matches( line )\n",
     "    false\n",
-    "  end\n",
-    "\n",
-    "  # 'Visits' a multiline text, that is: applies the\n",
-    "  # matches function above to each line of the text.\n",
-    "  def visit( text )\n",
-    "    matches = []\n",
-    "    text.each_line do |line|\n",
-    "      if matches( line )\n",
-    "        matches.push( self.class )\n",
-    "      else\n",
-    "        matches.push( nil )\n",
-    "      end\n",
-    "    end\n",
-    "    matches\n",
     "  end\n",
     "\n",
     "end"
@@ -248,28 +235,15 @@
     "    self.text = File.read( file_path )\n",
     "  end\n",
     "\n",
-    "  # Used by models to iterate over all lines for matching.\n",
-    "  def each_line\n",
-    "    @lines.each{ |line| yield line }\n",
-    "  end\n",
-    "\n",
-    "  # Used by models to iterate over all lines for matching, when context is \n",
-    "  # needed, e.g. in the case of the English model.\n",
-    "  # Context is provided as 10 lines before and after the current line.\n",
-    "  def each_line_with_context\n",
-    "    @lines.each_with_index do |line,index|\n",
-    "      yield line, @lines[(index-10)..(index-1)].reverse, @lines[(index+1)..(index+10)]\n",
-    "    end\n",
-    "  end\n",
-    "\n",
-    "  # Delegates matching to the models.\n",
-    "  # yields each line [String] and its matches [Array]\n",
     "  def match_lines\n",
-    "    matches = []\n",
-    "    @models.each { |model| matches.push( model.visit( self ) ) }\n",
-    "    matches = matches.transpose\n",
-    "    @lines.each_with_index do |line, index|\n",
-    "      yield line, matches[index].compact\n",
+    "    @lines.each do |line|\n",
+    "      matches = []\n",
+    "      @models.each do |model|\n",
+    "        if model.matches( line )\n",
+    "          matches.push( model.class )\n",
+    "        end\n",
+    "      end\n",
+    "      yield line, matches\n",
     "    end\n",
     "  end\n",
     "\n",
@@ -654,6 +628,15 @@
    "source": [
     "[Proceed to the next chapter](/notebooks/03%20%20On%20Iterations.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
