Generalized multiline model parsing, updated notebooks

--- a/notebook/02  From Transcription to Digital Text.ipynb
+++ b/notebook/02  From Transcription to Digital Text.ipynb
@@ -58,9 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Concrete models\n",
-    "\n",
-    "Now we need several concrete models that will enable us to categorize lines in the text. Looking at the text we see that there are a number of 'types' of lines that we don't need. Lines that contain only numbers (page number or verse numbers) for instance, lines that are in all capital font and that coincide with page headers and chapter headings, lines belonging to footnotes, and lastly empty lines. We can express this by creating concrete model classes that implement the matches method of the super class in specific ways. Thus we end up with four models (AllCaps, FootNote, Numbers, and Empty) that each use a different [regular expression](https://en.wikipedia.org/wiki/Regular_expression) to match the text surfaces that are typical for each type of line. You'll find these regular expressions as the red parts below in each class (e.g. /[[:upper:]]/, which matches upper case letters). These expression if not encountered before may seem hermetic, but with a bit of study [effort](http://www.regular-expressions.info/) they will be sufficiently understandable."
+    "But wait.. not all models will apply to exactly one line. Remember those footnotes? Those are multiline phenomena. We will need some way of registering or knowing that a model is terminated. Thus we add a variable and a way to read it to the super model. Each derived concrete model will have the ability to 'know' by which other models it is terminated."
    ]
   },
   {
@@ -77,6 +75,52 @@
       ]
      },
      "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Model\n",
+    "\n",
+    "  # A class instance variable that holds a list of \n",
+    "  # other models that terminates this model. \n",
+    "  @terminators = nil\n",
+    "  def self.terminators\n",
+    "    @terminators\n",
+    "  end\n",
+    "\n",
+    "  # Determines if the model matches a line of text.\n",
+    "  # By default it returns false because it doesn't match anything.\n",
+    "  def matches( line )\n",
+    "    false\n",
+    "  end\n",
+    "\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Concrete models\n",
+    "\n",
+    "Now we need several concrete models that will enable us to categorize lines in the text. Looking at the text we see that there are a number of 'types' of lines that we don't need. Lines that contain only numbers (page number or verse numbers) for instance, lines that are in all capital font and that coincide with page headers and chapter headings, lines belonging to footnotes, and lastly empty lines. We can express this by creating concrete model classes that implement the matches method of the super class in specific ways. Thus we end up with four models (AllCaps, FootNote, Numbers, and Empty) that each use a different [regular expression](https://en.wikipedia.org/wiki/Regular_expression) to match the text surfaces that are typical for each type of line. You'll find these regular expressions as the red parts below in each class (e.g. /[[:upper:]]/, which matches upper case letters). These expression if not encountered before may seem hermetic, but with a bit of study [effort](http://www.regular-expressions.info/) they will be sufficiently understandable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":matches"
+      ]
+     },
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +186,7 @@
        ":matches"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,12 +244,16 @@
    "source": [
     "#### Adding an engine\n",
     "\n",
-    "Now that we have all these models we need something that will take an actual text, set the models lose on it and returns us just the Middle Dutch verses that we were looking for. This piece of machinery we will call the OCRParser. The OCRParser class takes a text and splits it on line breaks. Then it delegates the matching of lines to the models described above. It then returns only those lines that did not answer to any model, which should be only the Middle Dutch verses.\n"
+    "Now that we have all these models we need something that will take an actual text, set the models lose on it and returns us just the Middle Dutch verses that we were looking for. This piece of machinery we will call the OCRParser. The OCRParser class takes a text (method load_text) and splits it on line breaks (method text=). Then it delegates the matching of lines to the models described above in the method match_lines. \n",
+    "\n",
+    "The method parse_tuples considers the possibilities of models spanning multiple lines. It keeps track of which multiline models are active and checks if a new model that is matched maybe terminates any of the active multiline models. It then returns all lines and adds to each an indicator whether it was matched by a model or not (true, false). It also adds a list of the models that matched the line. \n",
+    "\n",
+    "The parse method filters that result and returns only those lines that did not answer to any model, which should be only the Middle Dutch verses.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +264,7 @@
        ":parse"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,38 +295,29 @@
     "    end\n",
     "  end\n",
     "\n",
-    "  # TODO!! This needs to be adjusted (and that adjustment should go into the notebook).\n",
-    "  # The problem is that the knowledge that the footnote model may stretch\n",
-    "  # multiple lines is now embeddd in this method, but it should be knowledge\n",
-    "  # of the model and that can be 'handed' to the parser.\n",
-    "  def parse_to_annotated_array\n",
-    "    result = []\n",
-    "    context = []\n",
+    "  def parse_tuples\n",
+    "    active_multiline_models = []\n",
     "    match_lines do |line, matches|\n",
-    "      if matches.include?( FootNote )\n",
-    "        context.pop\n",
-    "        context.push( FootNote )\n",
-    "      end\n",
-    "      if matches.include?( AllCaps )\n",
-    "        context.pop\n",
-    "      end\n",
-    "      if context.last != FootNote\n",
-    "        if matches.size() == 0\n",
-    "          result.push( [ \"A\", line, matches ] )\n",
-    "        else\n",
-    "          result.push( [ \"I\", line, matches ] )\n",
+    "      matches.each do |model|\n",
+    "        active_multiline_models.reject! do |active_multiline_model|\n",
+    "          active_multiline_model.terminators.include? model\n",
     "        end\n",
+    "        if model.terminators != nil\n",
+    "          active_multiline_models.push( model )\n",
+    "        end\n",
+    "      end\n",
+    "      if matches.size == 0 && active_multiline_models.size == 0\n",
+    "        yield true, line, matches\n",
     "      else\n",
-    "        result.push( [ \"I\", line, matches ] )\n",
+    "        yield false, line, matches\n",
     "      end\n",
     "    end\n",
-    "    result\n",
     "  end\n",
     "\n",
     "  def parse\n",
-    "    raw = parse_to_annotated_array()\n",
-    "    raw.reject! { |annotated_line| annotated_line[0] == \"I\" }\n",
-    "    raw.map! { |annotated_line| annotated_line[1] }\n",
+    "    tuples = []\n",
+    "    parse_tuples { | accept, line | tuples.push line if accept }\n",
+    "    tuples\n",
     "  end\n",
     "\n",
     "end"
@@ -294,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -330,6 +369,7 @@
       "Mijns dichtens ware een ghestille,\n",
       "ne hads mi eene niet ghebeden\n",
       "Prologue\n",
+      "among people.\n",
       "gherne keert hare saken.\n",
       "Soe bat mi dat ic soude maken\n",
       "dese avontuere van Reynaerde.\n",
@@ -386,6 +426,8 @@
       "Heere, dit kennen noch die beste\n",
       "die te hove zijn commen hier.\n",
       "Mi hevet Reynaert, dat felle dier,\n",
+      "charges against Reynaert. Medieval feudal society initially lacked a strong, central source\n",
+      "is dissembling (cf. p. 33).\n",
       "so vele te leede ghedaen,\n",
       "ic weet wel al sonder waen:\n",
       "al ware al tlaken paerkement\n",
@@ -541,6 +583,7 @@
       "Reynaerd, die zijn meester was,\n",
       "mochte hi sinen clerc niet blauwen?\n",
       "Dat ware onrecht, entrauwen.\n",
+      "1988.\n",
       "Reynaert, my dear young man!\n",
       "accommodated Reynaert\n",
       "Now Lord Cuwaert, the hare,\n",
@@ -575,7 +618,8 @@
       "saghen si van berghe te dale\n",
       "Canticler commen ghevaren,\n",
       "ende brochte up eene bare\n",
-      "eene doode hinne ende hiet Coppe,\n"
+      "eene doode hinne ende hiet Coppe,\n",
+      "goods’, or ‘stolen goods never thrive’.\n"
      ]
     }
    ],
