--- a/notebook/03  On Iterations.ipynb
+++ b/notebook/03  On Iterations.ipynb
@@ -13,21 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The byciclist rides on <part>the</part> bike\n",
-      "The train conductor asks for <part>the</part> tickets\n",
-      "The train conductor asks for <part>the</part> tickets\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "puts \"The byciclist rides on the bike\".gsub( \"the\", \"<part>the</part>\" )\n",
     "puts \"The train conductor asks for the tickets\".gsub( \"the\", \"<part>the</part>\" )\n",
@@ -43,21 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The byciclist rides on <part>the</part> bike\n",
-      "The train conductor asks for <part>the</part> tickets\n",
-      "The train conductor asks for <part>the</part> tickets\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def mark_part( string )\n",
     "  string.gsub( \"the\", \"<part>the</part>\" ) \n",
@@ -79,21 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<part>The</part> byciclist rides on <part>the</part> bike\n",
-      "<part>The</part> train conductor asks for <part>the</part> tickets\n",
-      "<part>The</part> train conductor asks for <part>the</part> tickets\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def mark_part( string )\n",
     "  string.gsub( /(t|T)he/, '<part>\\1he</part>' ) \n",
@@ -121,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +102,7 @@
        "true"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -162,7 +132,7 @@
        ":matches"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -588,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -599,7 +569,7 @@
        ":matches"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,6 +578,13 @@
     "class Model\n",
     "\n",
     "  attr_accessor :line_context\n",
+    "\n",
+    "  # A class instance variable that holds a list of \n",
+    "  # other models that terminates this model. \n",
+    "  @terminators = nil\n",
+    "  def self.terminators\n",
+    "    @terminators\n",
+    "  end\n",
     "\n",
     "  # Determines if the model matches a line of text.\n",
     "  # By default it returns false because it doesn't match anything.\n",
@@ -627,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -638,7 +615,7 @@
        ":initialize"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -678,7 +655,7 @@
        ":parse"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,38 +688,29 @@
     "    end\n",
     "  end\n",
     "\n",
-    "  # This needs to be adjusted (and that adjustment should go into the notebook).\n",
-    "  # The problem is that the knowledge that the footnote model may stretch\n",
-    "  # multiple lines is now embeddd in this method, but it should be knowledge\n",
-    "  # of the model and that can be 'handed' to the parser.\n",
-    "  def parse_to_annotated_array\n",
-    "    result = []\n",
-    "    context = []\n",
+    "  def parse_tuples\n",
+    "    active_multiline_models = []\n",
     "    match_lines do |line, matches|\n",
-    "      if matches.include?( FootNote )\n",
-    "        context.pop\n",
-    "        context.push( FootNote )\n",
-    "      end\n",
-    "      if matches.include?( AllCaps )\n",
-    "        context.pop\n",
-    "      end\n",
-    "      if context.last != FootNote\n",
-    "        if matches.size() == 0\n",
-    "          result.push( [ \"A\", line, matches ] )\n",
-    "        else\n",
-    "          result.push( [ \"I\", line, matches ] )\n",
+    "      matches.each do |model|\n",
+    "        active_multiline_models.reject! do |active_multiline_model|\n",
+    "          active_multiline_model.terminators.include? model\n",
     "        end\n",
+    "        if model.terminators != nil\n",
+    "          active_multiline_models.push( model )\n",
+    "        end\n",
+    "      end\n",
+    "      if matches.size == 0 && active_multiline_models.size == 0\n",
+    "        yield true, line, matches\n",
     "      else\n",
-    "        result.push( [ \"I\", line, matches ] )\n",
+    "        yield false, line, matches\n",
     "      end\n",
     "    end\n",
-    "    result\n",
     "  end\n",
     "\n",
     "  def parse\n",
-    "    raw = parse_to_annotated_array()\n",
-    "    raw.reject! { |annotated_line| annotated_line[0] == \"I\" }\n",
-    "    raw.map! { |annotated_line| annotated_line[1] }\n",
+    "    tuples = []\n",
+    "    parse_tuples { | accept, line | tuples.push line if accept }\n",
+    "    tuples\n",
     "  end\n",
     "\n",
     "end"
@@ -757,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -768,7 +736,7 @@
        ":above_treshold"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -1177,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -1188,7 +1156,7 @@
        ":matches"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -1600,7 +1568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Proceed to the next chapter](/notebooks/04%20%20Towards%20the%20OO%20text.ipynb)"
+    "[Proceed to the next chapter](/notebooks/04%20%20Towards%20the%20OO%20Text.ipynb)"
    ]
   },
   {
